--- a/src/app/components/appointments/all-appointments/all-appointments.component.html
+++ b/src/app/components/appointments/all-appointments/all-appointments.component.html
@@ -1,11 +1,13 @@
 <div class="py-5">
 
-    <mat-form-field appearance="outline" class="!w-full md:max-w-[300px] float-right">
-        <mat-label>Search Patient</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Patient name" #input>
-    </mat-form-field>
+    <div class="text-right w-full">
+        <mat-form-field appearance="outline" class="!w-full md:max-w-[300px]">
+            <mat-label>Search Patient</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Patient name" #input>
+        </mat-form-field>
+    </div>
 
-    <div class="overflow-x: auto;">
+    <div class="overflow-auto">
         <table mat-table [dataSource]="dataSource" matSort>
 
             <ng-container matColumnDef="patientFullname">
