--- a/src/app/pages/record/record.component.html
+++ b/src/app/pages/record/record.component.html
@@ -114,7 +114,7 @@
             
             <div class="grid grid-cols-1 gap-5">
             
-                <div class="overflow-x: auto;">
+                <div class="overflow-auto">
                     <table mat-table [dataSource]="dataSource" matSort>
             
                         <ng-container matColumnDef="medical_reason">
