--- a/src/app/components/employee/manage-employee/manage-employee.component.html
+++ b/src/app/components/employee/manage-employee/manage-employee.component.html
@@ -10,7 +10,7 @@
 
             <ng-container matColumnDef="fullname">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Fullname </th>
-                <td mat-cell *matCellDef="let row"> {{row.fullname}} </td>
+                <td mat-cell *matCellDef="let row" class="capitalize"> {{row.firstname}} {{row.middlename}} {{row.lastname}}</td>
             </ng-container>
 
             <ng-container matColumnDef="position">
@@ -27,8 +27,8 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Action </th>
                 <td mat-cell *matCellDef="let row"> 
                     <div class="flex gap-2">
-                        <button mat-stroked-button class="!bg-[#198754] !text-white hover:!bg-green-800" (click)="openEditEmployee(row.id)"><fa-icon [icon]="faPencil"></fa-icon></button>
-                        <button mat-stroked-button class="!bg-red-700 !text-white hover:!bg-red-800" (click)="openArchiveEmployee(row.id)"><fa-icon [icon]="faTrashCan"></fa-icon></button>
+                        <button mat-stroked-button class="!bg-[#198754] !text-white hover:!bg-green-800" (click)="openEditEmployee(row)"><fa-icon [icon]="faPencil"></fa-icon></button>
+                        <button mat-stroked-button class="!bg-red-700 !text-white hover:!bg-red-800" (click)="openArchiveEmployee(row)"><fa-icon [icon]="faTrashCan"></fa-icon></button>
                     </div>
                 </td>
             </ng-container>
