--- a/src/app/pages/appointments/appointments.component.html
+++ b/src/app/pages/appointments/appointments.component.html
@@ -3,7 +3,7 @@
 1<div class="relative top-10 py-10 px-5 w-[100vw] lg:pl-[280px]">
     <app-header [title]="pageTitle"></app-header>
 
-    <button mat-raised-button color="primary" class="!mt-6 !px-8 !py-6 !w-full md:!max-w-[250px]" (click)="toggleNewAppointmentForm()">Create new appointment</button>
+    <button mat-raised-button color="primary" class="!mt-6 !px-8 !py-6 !w-full md:!max-w-[250px]" (click)="toggleNewAppointmentForm()" *ngIf="auth.getUserType() === '3'">Create new appointment</button>
 
     <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center" animationDuration="500ms" class="mt-5"
         selectedIndex="2" (selectedTabChange)="onTabChange($event)">
