--- a/src/app/components/appointments/approved-appointments/approved-appointments.component.html
+++ b/src/app/components/appointments/approved-appointments/approved-appointments.component.html
@@ -17,7 +17,7 @@
 
             <ng-container matColumnDef="appointed_time">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Appointed Time </th>
-                <td mat-cell *matCellDef="let row" [ngClass]="{ 'text-red-600': row.appointed_time === null }"> {{row.appointed_time || 'Not yet set' }} </td>
+                <td mat-cell *matCellDef="let row" [ngClass]="{ 'text-red-600': row.appointed_time === null }"> {{row.appointed_time ? convertTo12HourFormat(row.appointed_time) : 'Not yet set' }} </td>
             </ng-container>
 
             <ng-container matColumnDef="appointed_date">
