--- a/src/app/components/patients/manage-patients/manage-patients.component.html
+++ b/src/app/components/patients/manage-patients/manage-patients.component.html
@@ -1,3 +1,5 @@
+<app-loading-screen *ngIf="isLoading"></app-loading-screen>
+
 <div class="py-5">
 
     <mat-form-field appearance="outline" class="!w-full md:max-w-[300px] float-right">
@@ -10,7 +12,7 @@
 
             <ng-container matColumnDef="fullname">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Patient </th>
-                <td mat-cell *matCellDef="let row"> {{row.fullname}} </td>
+                <td mat-cell *matCellDef="let row" class="capitalize"> {{row.firstname}} {{row.middlename}} {{row.lastname}}</td>
             </ng-container>
 
             <ng-container matColumnDef="marital_status">
@@ -33,13 +35,8 @@
                 <td mat-cell *matCellDef="let row"> {{row.contact_no}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Action </th>
-                <td mat-cell *matCellDef="let row"> {{row.date_created | date:'MMMM dd, YYYY HH:mm a' }} </td>
-            </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns" class="!bg-[#3f51b5] !font-bold !text-white"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="hover:cursor-pointer" routerLink="/record/{{row.userId}}"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="hover:cursor-pointer" routerLink="/record/{{row.user_id}}"></tr>
 
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
