--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -6,27 +6,27 @@
     <div class="flex flex-row flex-nowrap overflow-auto gap-3 mt-10 lg:overflow-hidden lg:flex-wrap lg:gap-5 lg:justify-center">
         <div class="w-full min-w-[306px] max-w-[308px] !py-6 px-5 border shadow-xl rounded-lg box-border bg-slate-800 text-white">
             <p class="!m-0 !mb-2 font-semibold text-xl">Total Patients</p>
-            <p class="!m-0 text-lg">10,234</p>
+            <p class="!m-0 text-lg">{{ totalPatients }}</p>
         </div>
         
         <div class="w-full min-w-[306px] max-w-[308px] !py-6 px-5 border shadow-xl rounded-lg box-border bg-slate-800 text-white">
             <p class="!m-0 !mb-2 font-semibold text-xl">Total Staff</p>
-            <p class="!m-0 text-lg">10,234</p>
+            <p class="!m-0 text-lg">{{ totalStaff }}</p>
         </div>
 
         <div class="w-full min-w-[306px] max-w-[308px] !py-6 px-5 border shadow-xl rounded-lg box-border bg-slate-800 text-white">
-            <p class="!m-0 !mb-2 font-semibold text-xl">Avg Patient/ day</p>
-            <p class="!m-0 text-lg">10,234</p>
+            <p class="!m-0 !mb-2 font-semibold text-xl">Avg Appointment/ day</p>
+            <p class="!m-0 text-lg">{{ avgPatientPerDay }}</p>
         </div>
 
         <div class="w-full min-w-[306px] max-w-[308px] !py-6 px-5 border shadow-xl rounded-lg box-border bg-slate-800 text-white">
-            <p class="!m-0 !mb-2 font-semibold text-xl">Appointments Today</p>
-            <p class="!m-0 text-lg">10,234</p>
+            <p class="!m-0 !mb-2 font-semibold text-xl">Appointment Today</p>
+            <p class="!m-0 text-lg">{{ appointmentsToday }}</p>
         </div>
 
         <div class="w-full min-w-[306px] max-w-[308px] !py-6 px-5 border shadow-xl rounded-lg box-border bg-slate-800 text-white">
             <p class="!m-0 !mb-2 font-semibold text-xl">Missed Appointments</p>
-            <p class="!m-0 text-lg">10,234</p>
+            <p class="!m-0 text-lg">{{ missedAppointments }}</p>
         </div>
     </div>
 
