--- a/src/app/pages/record/record.component.html
+++ b/src/app/pages/record/record.component.html
@@ -2,153 +2,177 @@
 
 <div class="relative top-10 py-10 px-5 w-[100vw] lg:pl-[280px]">
     <app-header [title]="pageTitle"></app-header>
-    <p class="!mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem a nostrum tempore eum libero magni modi quam, distinctio quae beatae porro, laudantium dolor fugiat voluptatum.</p>
+    <p class="!mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem a nostrum tempore eum
+        libero magni modi quam, distinctio quae beatae porro, laudantium dolor fugiat voluptatum.</p>
 
-    <button mat-raised-button color="primary" (click)="onPrint('medicalHistory')"><fa-icon [icon]="faPrint"></fa-icon>&nbsp;&nbsp;Print medical record</button>
+    <button mat-raised-button color="primary" (click)="onPrint('medicalHistory')" *ngIf="auth.getUserType() !== '3'"><fa-icon
+            [icon]="faPrint"></fa-icon>&nbsp;&nbsp;Print medical record</button>
 
     <div class="py-5" id="medicalHistory">
 
         <div class="grid grid-cols-1 gap-5">
 
             <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-3">
-    
+
                 <div class="flex flex-col gap-2 bg-blue-200 w-full px-8 py-4 rounded">
-    
+
                     <p class="!font-bold !text-xl">Personal Information</p>
-    
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Full Name:</p>
-                        <p class="!m-0 capitalize">{{patientInfo.personalInfo.firstname}} {{patientInfo.personalInfo.middlename}} {{patientInfo.personalInfo.lastname}}</p>
+                        <p class="!m-0 capitalize">{{patientInfo.personalInfo.firstname}}
+                            {{patientInfo.personalInfo.middlename}} {{patientInfo.personalInfo.lastname}}</p>
                     </div>
-    
-    
+
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Gender:</p>
                         <p class="!m-0 capitalize">{{patientInfo.personalInfo.gender}}</p>
                     </div>
-    
-    
+
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Marital Status:</p>
                         <p class="!m-0 capitalize">{{patientInfo.personalInfo.marital_status}}</p>
                     </div>
-    
-    
+
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Contact No:</p>
                         <p class="!m-0 capitalize">{{patientInfo.contactInfo.contact_no}}</p>
                     </div>
-    
-    
+
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Birthdate:</p>
                         <p class="!m-0">{{ patientInfo.personalInfo.birthdate | date:'dd/MM/yyyy' }}</p>
                     </div>
-    
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Email:</p>
                         <p class="!m-0 !whitespace-pre">{{patientInfo.contactInfo.email}}</p>
                     </div>
-    
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Address:</p>
                         <p class="!m-0 capitalize">{{patientInfo.contactInfo.address}}</p>
                     </div>
-    
+
                 </div>
-    
-    
+
+
                 <div class="flex flex-col gap-2 bg-blue-200 w-full px-8 py-4 rounded">
-    
+
                     <p class="!font-bold !text-xl">Contact Incase of Emergency</p>
-    
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Fullname:</p>
                         <p class="!m-0 capitalize">{{patientInfo.emergencyContactInfo.contact_fullname}}</p>
                     </div>
-    
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Contact No:</p>
                         <p class="!m-0 capitalize">{{patientInfo.emergencyContactInfo.emegency_contact_no}}</p>
                     </div>
-    
+
                 </div>
-    
-                
-                <div class="flex flex-col gap-2 bg-blue-200 w-full px-8 py-4 rounded col-span-1 md:col-span-2 lg:col-span-1">
-    
+
+
+                <div
+                    class="flex flex-col gap-2 bg-blue-200 w-full px-8 py-4 rounded col-span-1 md:col-span-2 lg:col-span-1">
+
                     <p class="!font-bold !text-xl">Physical Information</p>
-                    
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Height</p>
-                        <p class="!m-0 capitalize">{{ !patientInfo.medicalInfo.height ? '-- Not yet set --' : patientInfo.medicalInfo.height}}</p>
+                        <p class="!m-0 capitalize">{{ !patientInfo.medicalInfo.height ? '-- Not yet set --' :
+                            patientInfo.medicalInfo.height}}</p>
                     </div>
-                    
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Weight</p>
-                        <p class="!m-0 capitalize">{{ !patientInfo.medicalInfo.weight ? '-- Not yet set --' : patientInfo.medicalInfo.weight}}</p>
+                        <p class="!m-0 capitalize">{{ !patientInfo.medicalInfo.weight ? '-- Not yet set --' :
+                            patientInfo.medicalInfo.weight}}</p>
                     </div>
-                    
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Blood Pressure</p>
-                        <p class="!m-0 capitalize">{{ !patientInfo.medicalInfo.blood_pressure ? '-- Not yet set --' : patientInfo.medicalInfo.blood_pressure }}</p>
+                        <p class="!m-0 capitalize">{{ !patientInfo.medicalInfo.blood_pressure ? '-- Not yet set --' :
+                            patientInfo.medicalInfo.blood_pressure }}</p>
                     </div>
-    
+
                     <div class="flex flex-row gap-2 items-center">
                         <p class="!m-0 !font-bold">Blood Type</p>
-                        <p class="!m-0 capitalize">{{ !patientInfo.medicalInfo.blood_type ? '-- Not yet set --' : patientInfo.medicalInfo.blood_type }}</p>
+                        <p class="!m-0 capitalize">{{ !patientInfo.medicalInfo.blood_type ? '-- Not yet set --' :
+                            patientInfo.medicalInfo.blood_type }}</p>
                     </div>
-    
+
                     <div class="flex flex-col gap-2 items-start">
                         <p class="!m-0 !font-bold">Disablity</p>
-                        <p class="!m-0">{{ !patientInfo.medicalInfo.disability ? '-- No Disability --' : patientInfo.medicalInfo.disability }}</p>
+                        <p class="!m-0">{{ !patientInfo.medicalInfo.disability ? '-- No Disability --' :
+                            patientInfo.medicalInfo.disability }}</p>
                     </div>
-    
+
                     <div class="flex flex-col gap-2 items-start">
                         <p class="!m-0 !font-bold">Contagious Disease</p>
-                        <p class="!m-0">{{ !patientInfo.medicalInfo.contagious_disease ? '-- No Disease --' : patientInfo.medicalInfo.contagious_disease }}</p>
+                        <p class="!m-0">{{ !patientInfo.medicalInfo.contagious_disease ? '-- No Disease --' :
+                            patientInfo.medicalInfo.contagious_disease }}</p>
                     </div>
                 </div>
             </div>
-    
-            
+
+
             <div class="grid grid-cols-1 gap-5">
-            
+
                 <div class="overflow-auto">
                     <table mat-table [dataSource]="dataSource" matSort>
-            
+
                         <ng-container matColumnDef="medical_reason">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Medical Reason </th>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header
+                                class="!bg-[#3f51b5] !font-bold !text-white"> Medical Reason </th>
                             <td mat-cell *matCellDef="let row"> {{row.medical_reason}} </td>
                         </ng-container>
-            
+
                         <ng-container matColumnDef="medical_desc">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Medical Description </th>
-                            <td mat-cell *matCellDef="let row"> {{row.medical_desc}} </td>
-                        </ng-container>
-            
-                        <ng-container matColumnDef="diagnosis">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Diagnosis </th>
-                            <td mat-cell *matCellDef="let row"> {{row.diagnosis}} </td>
-                        </ng-container>
-                        
-                        <ng-container matColumnDef="physician">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Physician </th>
-                            <td mat-cell *matCellDef="let row"> {{row.physician}} </td>
-                        </ng-container>
-            
-                        <ng-container matColumnDef="date_created">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Diagnosis Date </th>
-                            <td mat-cell *matCellDef="let row"> {{row.date_created | date:'MMMM dd, YYYY'}} </td>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header
+                                class="!bg-[#3f51b5] !font-bold !text-white"> Medical Description </th>
+                            <td mat-cell *matCellDef="let row"> {{row.medical_description}} </td>
                         </ng-container>
 
-            
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns" class="!bg-[#3f51b5] !font-bold !text-white"></tr>
+                        <ng-container matColumnDef="diagnosis">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header
+                                class="!bg-[#3f51b5] !font-bold !text-white"> Diagnosis </th>
+                            <td mat-cell *matCellDef="let row"> {{row.diagnosis || '-- No diagnosis --'}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="physician">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header
+                                class="!bg-[#3f51b5] !font-bold !text-white"> Physician </th>
+                            <td mat-cell *matCellDef="let row" [ngClass]="{ 'text-red-600': row.physician === null }" class="capitalize"> {{row.physician || 'Not yet set'}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="date_created">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header
+                                class="!bg-[#3f51b5] !font-bold !text-white"> Diagnosis Date </th>
+                            <td mat-cell *matCellDef="let row"> {{row.appointed_date | date:'MMMM dd, YYYY'}} <span [ngClass]="{ 'text-red-600': row.appointed_time === null }">{{row.appointed_time ? convertTo12HourFormat(row.appointed_time) : '(Not yet set)' }}</span></td>
+                        </ng-container>
+
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"
+                            class="!bg-[#3f51b5] !font-bold !text-white"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    
+
+                        <!-- Row shown when there is no matching data. -->
+                        <tr class="mat-row" *matNoDataRow>
+                            <td class="mat-cell" colspan="6">
+                                <p class="!m-0 !py-3 bg-slate-300 text-center">No data found</p>
+                            </td>
+                        </tr>
+
                     </table>
-            
-                    <mat-paginator [pageSizeOptions]="[8, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+
+                    <mat-paginator [pageSizeOptions]="[8, 10, 25, 100]"
+                        aria-label="Select page of users"></mat-paginator>
                 </div>
             </div>
 
