--- a/src/app/components/account/personal-info/personal-info.component.html
+++ b/src/app/components/account/personal-info/personal-info.component.html
@@ -83,7 +83,7 @@
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" class="!w-[100%]">
-                        <mat-label>Password</mat-label>
+                        <mat-label>New Password</mat-label>
                         <input matInput placeholder="" type="{{ isPasswordVisible ? 'text' : 'password' }}"
                             formControlName="password">
                         <mat-icon *ngIf="this.accountInfo.get('password')?.value" matSuffix (click)="showPassword()">{{
