--- a/src/app/components/account/additional-info/additional-info.component.html
+++ b/src/app/components/account/additional-info/additional-info.component.html
@@ -6,8 +6,7 @@
             <form [formGroup]="contactInfo" (ngSubmit)="updateContactInfo(contactInfo.value)">
 
                 <h3 class="!text-lg !font-bold">My Contact Infomation</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, aut sunt sequi molestiae error
-                    inventore!</p>
+                <p>Always keep your addition information updated.</p>
 
                 <div class="py-3">
                     <div class="grid grid-cols-1 md:grid-cols-1 gap-2">
@@ -42,8 +41,7 @@
             <form [formGroup]="emergencyContactInfo" (ngSubmit)="updateEmergencyInfo(emergencyContactInfo.value)">
 
                 <h3 class="!text-lg !font-bold">Contact In Case of Emergency</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, aut sunt sequi molestiae error
-                    inventore!</p>
+                <p>Always keep your contact information updated.</p>
 
                 <div class="py-3">
 
