--- a/src/app/components/account/personal-info/personal-info.component.html
+++ b/src/app/components/account/personal-info/personal-info.component.html
@@ -7,8 +7,7 @@
             <form [formGroup]="personalInfo" (ngSubmit)="updatePersonalInfo(personalInfo.value)">
 
                 <h3 class="!text-lg !font-bold">Personal Infomation</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, aut sunt sequi molestiae error
-                    inventore!</p>
+                <p>Always keep your personal information updated.</p>
 
                 <div class="py-3">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
@@ -73,8 +72,7 @@
             <form [formGroup]="accountInfo" (ngSubmit)="updateAccountInfo(accountInfo.value)">
 
                 <h3 class="!text-lg !font-bold">Account Information</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, aut sunt sequi molestiae error
-                    inventore!</p>
+                <p>Update your username and password.</p>
 
                 <div class="py-3">
                     <mat-form-field appearance="outline" class="!w-[100%]">
