--- a/src/app/components/employee/new-employee/new-employee.component.html
+++ b/src/app/components/employee/new-employee/new-employee.component.html
@@ -9,12 +9,7 @@
                     width="250" alt="">
                 <br>
                 <h3 class="!text-2xl !font-semibold">New Employee Information</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus consequatur nemo beatae, tempora
-                    earum atque possimus quis inventore, dolorem error sit? Excepturi dolor qui ullam?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, iure eos, illum nobis pariatur
-                    voluptate obcaecati vel fuga reprehenderit quidem ratione officiis earum suscipit laborum amet,
-                    explicabo distinctio dolore odio saepe eaque laboriosam ab. Sit veniam delectus harum dolor est quo
-                    adipisci. Iusto, obcaecati tempore.</p>
+                <p>Complete your staff's information account by filling the correct Employee Details.</p>
             </div>
 
             <div class="lg:col-span-1">
