--- a/src/app/pages/signup-page/signup-page.component.html
+++ b/src/app/pages/signup-page/signup-page.component.html
@@ -7,9 +7,7 @@
             <img src="../../../assets/images/undraw_doctor_kw-5-l.svg" alt="" width="400" class="m-auto mb-10">
 
             <h1 class="!m-0 !font-bold !text-3xl">Sibut Medicare</h1>
-            <h3 class="text-slate-500">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta sit quod facilis
-                recusandae architecto quia non blanditiis! Ad minus rerum inventore quae laboriosam voluptatibus
-                corrupti.</h3>
+            <h3 class="text-slate-500">Welcome to SibutMedicare where you can now collect, and view your patients’ information through this website. Nurse and Staffs of Sibut healthcare center can also view and accept the patients' appointment request in this website. </h3>
             <h3 class="!font-semibold">Already have account?</h3>
             <button mat-raised-button color="primary" type="button" routerLink="/login">Click here to login</button>
         </div>
