--- a/src/app/components/account/medical-info/medical-info.component.html
+++ b/src/app/components/account/medical-info/medical-info.component.html
@@ -5,16 +5,14 @@
         <div class="p-3">
             <img src="../../../../assets/images/undraw_doctor_kw-5-l.svg" class="hidden md:block m-auto mb-5" width="400" alt="">
             <h3 class="!text-2xl !font-bold">My Basic Medical Info</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ratione beatae aspernatur quis rerum laborum magni mollitia minus! Ex totam quos rem maiores dolores suscipit.</p>
+            <p>Always keep your medical information updated.</p>
         </div>
 
         <div class="p-5 rounded shadow-lg border-2">
 
             <form [formGroup]="medicalInfo" (ngSubmit)="updateMedicalInfo(medicalInfo.value)">
 
-                <h3 class="!text-lg !font-bold">Personal Infomation</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, aut sunt sequi molestiae error
-                    inventore!</p>
+                <h3 class="!text-lg !font-bold">Medical Infomation</h3>
 
                 <div class="py-3">
                     <div class="grid grid-cols-1 gap-2">
