--- a/src/app/components/modal/modal-archive-employee/modal-archive-employee.component.html
+++ b/src/app/components/modal/modal-archive-employee/modal-archive-employee.component.html
@@ -1,11 +1,11 @@
 <div class="w-[100%] max-w-[520px] shadow-lg p-5">
     
-    <h1 class="font-semibold">Are you sure you want to delete {{ data.employeeFullname }}'s account?</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum, amet optio vitae numquam laudantium nisi vel mollitia minima, sunt facilis libero beatae commodi architecto doloribus?</p>
+    <h1 class="font-semibold">Are you sure you want to archive {{ data.employeeFullname }}'s account?</h1>
+    <p>Please note that this account will not be recovered once it is archived.</p>
 
     <div class="flex flex-row items-center justify-end gap-3 mt-5">
         <button mat-raised-button [mat-dialog-close]="false" class="hover:!bg-slate-300">Cancel</button>
-        <button mat-raised-button [mat-dialog-close]="true" class="!px-5 !text-white !bg-red-600 hover:!bg-red-800">Delete</button>
+        <button mat-raised-button [mat-dialog-close]="true" class="!px-5 !text-white !bg-red-600 hover:!bg-red-800">Archive</button>
     </div>
 
 </div>
