--- a/src/app/components/modal/modal-forgot-password/modal-forgot-password.component.html
+++ b/src/app/components/modal/modal-forgot-password/modal-forgot-password.component.html
@@ -1,4 +1,4 @@
-<div class="w-[100%] max-w-[720px] max-h-[400px] overflow-auto shadow-lg p-5">
+<div class="w-[100%] max-w-[720px] overflow-auto shadow-lg p-5">
     <h1 class="!font-semibold">Forgot Password</h1>
     <p>Please enter your active cellphone number and we will send you a One Time Password (OTP).</p>
 
@@ -12,7 +12,7 @@
                 <input autocomplete="off" matInput placeholder="Ex. 09228215465" formControlName="contact_no">
             </mat-form-field>
 
-            <button mat-raised-button color="primary" class="!p-7 !w-[100%]" (click)="sendOTPCode()" [disabled]="isbtnDisabled">{{ btnOTPSend }}</button>
+            <button mat-raised-button color="primary" class="!p-7 !w-[100%]" (click)="checkContact()" [disabled]="isbtnDisabled">{{ btnOTPSend }}</button>
         </div>
 
     </form>
@@ -28,7 +28,7 @@
         <h3 class="!font-semibold text-xl !mt-4 !mb-0">Enter new password</h3>
         <p>Please create your new password.</p>
 
-        <form [formGroup]="passwordCredentials">
+        <form [formGroup]="passwordCredentials" (ngSubmit)="submitCredentials(passwordCredentials.value)">
 
             <mat-form-field appearance="outline" class="!w-[100%]">
                 <mat-label>New Password</mat-label>
@@ -39,7 +39,7 @@
                     }}</mat-icon>
             </mat-form-field>
 
-            <button mat-raised-button color="primary" class="!p-7 !w-[100%]">Change password</button>
+            <button mat-raised-button color="primary" class="!p-7 !w-[100%]" type="submit">Change password</button>
 
         </form>
     </div>
