--- a/src/app/components/modal/modal-new-appointment/modal-new-appointment.component.html
+++ b/src/app/components/modal/modal-new-appointment/modal-new-appointment.component.html
@@ -1,6 +1,6 @@
 <div class="w-[100%] max-w-[620px] shadow-lg p-5">
     <h1 class="font-semibold">New Appointment</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque inventore perspiciatis eveniet totam, accusantium quaerat?</p>
+    <p>See a doctor for check-ups or for medical other reasons.</p>
 
     <form [formGroup]="appointmentData" (ngSubmit)="submitNewAppointment(appointmentData.value)">
 
