--- a/src/app/pages/activity-log/activity-log.component.html
+++ b/src/app/pages/activity-log/activity-log.component.html
@@ -1,3 +1,5 @@
+<app-loading-screen *ngIf="isLoading"></app-loading-screen>
+
 <div class="relative top-10 py-10 px-5 w-[100vw] lg:pl-[280px]">
     <app-header [title]="pageTitle"></app-header>
 
@@ -28,7 +30,7 @@
                 
                 <ng-container matColumnDef="date_created">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header class="!bg-[#3f51b5] !font-bold !text-white"> Date Created </th>
-                    <td mat-cell *matCellDef="let row"> {{row.date_created | date:'MMMM dd, YYYY HH:mm a' }} </td>
+                    <td mat-cell *matCellDef="let row"> {{row.createdAt | date:'MMMM dd, YYYY HH:mm a' }} </td>
                 </ng-container>
     
                 <tr mat-header-row *matHeaderRowDef="displayedColumns" class="!bg-[#3f51b5] !font-bold !text-white"></tr>
