--- a/src/app/components/account/additional-info/additional-info.component.html
+++ b/src/app/components/account/additional-info/additional-info.component.html
@@ -20,11 +20,55 @@
                             <mat-label>Email Address</mat-label>
                             <input autocomplete="off" matInput placeholder="" formControlName="email">
                         </mat-form-field>
+                    </div>
 
-                        <mat-form-field appearance="outline" class="!w-[100%]">
-                            <mat-label>Address</mat-label>
-                            <textarea matInput rows="5" placeholder="Street, Subdivision, City, Province"
-                                formControlName="address"></textarea>
+                    <div class="text-right">
+                        <button mat-raised-button color="primary" class="!px-9">Update</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+
+
+        <div class="p-5 rounded shadow-lg border-2">
+            <form [formGroup]="addressInfo" (ngSubmit)="updateAddressInfo(addressInfo.value)">
+
+                <h3 class="!text-lg !font-bold">My Contact Infomation</h3>
+                <p>Always keep your addition information updated.</p>
+
+                <div class="py-3">
+                    <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
+                        <mat-form-field appearance="outline" class="!w-full col-span-2 lg:col-span-1">
+                            <mat-label>Region</mat-label>
+                            <mat-select formControlName="region" (selectionChange)="regionSelect($event)">
+                                <mat-option *ngFor="let reg of regionList" [value]="reg.regCode">{{ reg.regDesc
+                                    }}</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+
+                        <mat-form-field appearance="outline" class="!w-full col-span-2 lg:col-span-1">
+                            <mat-label>Province</mat-label>
+                            <mat-select formControlName="province" (selectionChange)="provinceSelect($event)">
+                                <mat-option *ngFor="let prov of provinceList" [value]="prov.provCode">{{ prov.provDesc
+                                    }}</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+
+                        <mat-form-field appearance="outline" class="!w-full col-span-2 lg:col-span-1">
+                            <mat-label>Municipality/ City</mat-label>
+                            <mat-select formControlName="cityMun" (selectionChange)="cityMunSelect($event)">
+                                <mat-option *ngFor="let citymun of municipalityList" [value]="citymun.citymunCode">{{
+                                    citymun.citymunDesc }}</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+
+                        <mat-form-field appearance="outline" class="!w-full col-span-2 lg:col-span-1">
+                            <mat-label>Barangay</mat-label>
+                            <mat-select formControlName="barangay">
+                                <mat-option *ngFor="let brgy of barangayList" [value]="brgy.brgyCode">{{ brgy.brgyDesc
+                                    }}</mat-option>
+                            </mat-select>
                         </mat-form-field>
                     </div>
 
@@ -36,7 +80,6 @@
         </div>
 
 
-        
         <div class="p-5 rounded shadow-lg border-2">
             <form [formGroup]="emergencyContactInfo" (ngSubmit)="updateEmergencyInfo(emergencyContactInfo.value)">
 
